<resources>
    <string name="app_name">Santander</string>
    <string name="txt_santander">Santander</string>
    <string name="ola_mundo">Olá Mundo!!! :D</string>
    <string name="txt_saldo_disponivel">Saldo disponível</string>
    <string name="txt_saldo_limite">Saldo - Limite</string>
    <string name="txt_ver_extrato">Ver Extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarregar">Recarregar</string>
    <string name="txt_card_final">Cartão Final</string>
</resources>